<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">首頁</string>
    <string name="menu_gallery">個人資料</string>
    <string name="menu_slideshow">路況回報</string>
    <string name="menu_monitor">即時路況</string>
    <string name="menu_comment">評論專區</string>
    <string name="menu_setting">設定</string>
</resources>