<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/baseline_car_crash_24"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_moitor"
            android:icon="@drawable/baseline_personal_video_24"
            android:title="@string/menu_monitor" />
        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/baseline_comment_24"
            android:title="@string/menu_comment" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>