<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.myapplication.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.myapplication.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_moitor"
        android:name="com.example.myapplication.ui.monitor.MonitorFragment"
        android:label="@string/menu_monitor"
        tools:layout="@layout/nav_monitor" />

    <fragment
        android:id="@+id/nav_comment"
        android:name="com.example.myapplication.ui.comment.CommentFragment"
        android:label="@string/menu_comment"
        tools:layout="@layout/nav_comment" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.myapplication.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/nav_setting" />
</navigation>